# SmsPusher

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  version.properties
.github/workflows/: android-release.yml  macos-release.yml  update-manifest-pages.yml  windows-release.yml  windows-smoke.yml
apps/android/: build.gradle.kts  keystore.properties.example  settings.gradle.kts
apps/android/rust-crypto/: Cargo.toml
apps/android/rust-crypto/src/: lib.rs
apps/android/scripts/: build-android-release.sh  generate-android-release-keystore.sh
apps/android/src/main/: AndroidManifest.xml
apps/android/src/main/assets/: logback.xml
apps/android/src/main/java/com/hippo2cat/smspusher/: AppStartupReceiver.java  ConnectionStatusEvents.java  MainActivity.java  SmsListenerService.java  SmsPusherApplication.java  SmsReceiver.java
apps/android/src/main/java/com/hippo2cat/smspusher/auth/: PairingCredential.java  SecureTokenStore.java  TokenBundle.java  TokenStore.java
apps/android/src/main/java/com/hippo2cat/smspusher/ble/: BleAck.java  BleAckCodec.java  BleConstants.java  BleFrame.java  BleFrameCodec.java  BleFrameException.java  BleGattProfile.java  BlePeripheralController.java  BlePeripheralState.java  BlePermissionPolicy.java
apps/android/src/main/java/com/hippo2cat/smspusher/crypto/: SecureEnvelope.java  SmsPusherCrypto.java
apps/android/src/main/java/com/hippo2cat/smspusher/delivery/: BridgeApi.java  BridgeApiFactory.java  DeliveryQueue.java  DeliverySession.java  DeliveryWorker.java  PersistentDeliveryQueue.java  ProcessedSmsStore.java  SmsBridgeApiFactory.java
apps/android/src/main/java/com/hippo2cat/smspusher/discovery/: MacDiscoveryService.java  MacEndpointResolution.java  MacEndpointResolver.java  MacEndpointUrls.java  NsdMacEndpointResolver.java
apps/android/src/main/java/com/hippo2cat/smspusher/i18n/: AppLocale.java  LanguagePreference.java  LanguagePreferenceStore.java
apps/android/src/main/java/com/hippo2cat/smspusher/logging/: AppLogging.java  DiagnosticLogExporter.java
apps/android/src/main/java/com/hippo2cat/smspusher/miui/: MiuiPermissionGuide.java  MiuiPermissionRequester.java
apps/android/src/main/java/com/hippo2cat/smspusher/net/: HttpTransport.java  SecureMessageClient.java  SecurePairingClient.java  SmsBridgeClient.java  (+1 more)
apps/android/src/main/res/drawable/: ic_bridge_clipboard.xml  ic_bridge_globe.xml  ic_bridge_laptop.xml  ic_bridge_link.xml  ic_bridge_list.xml  ic_bridge_monitor.xml  ic_bridge_phone.xml  ic_bridge_pulse.xml  ic_bridge_refresh.xml  ic_bridge_settings.xml  ic_bridge_shield.xml  ic_bridge_sms.xml  ic_bridge_target.xml  ic_bridge_wifi.xml  ic_sms_bridge.xml
apps/android/src/main/res/values/: strings.xml  styles.xml
apps/android/src/main/res/values-zh-rCN/: strings.xml
apps/android/src/main/res/xml/: apk_file_paths.xml
apps/android/src/test/java/com/hippo2cat/smspusher/: AndroidProjectContractTest.java  I18nResourceContractTest.java  MainActivityPairingLifecycleTest.java
apps/tauri/: index.html  package-lock.json  package.json  vite.config.ts
apps/tauri/resources/: AppIcon.icns
apps/tauri/scripts/: package-tauri-macos-app.sh  package-tauri-macos-dmg.sh
apps/tauri/src/: App.tsx  HistoryApp.tsx  SettingsApp.tsx  TrayPopover.tsx  main.tsx  styles.css  tauri.ts  types.ts
apps/tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/locales/en-US/: desktop.ftl
apps/tauri/src-tauri/locales/zh-CN/: desktop.ftl
apps/tauri/src-tauri/src/: app_state.rs  commands.rs  event_pump.rs  i18n.rs  keyring_secret_store.rs  lan_diagnostics.rs  lib.rs  logging.rs  macos_user_notifications.m  main.rs  notifications.rs  platform_notifications.rs  storage.rs  tray_presentation.rs  updates.rs
apps/tauri/src-tauri/tests/: app_state_tests.rs  command_contract_tests.rs  event_pump_tests.rs  i18n_resource_tests.rs  lan_diagnostics_tests.rs  lan_parity_tests.rs  local_file_secret_store_tests.rs  logging_tests.rs  notification_tests.rs  repo_policy_tests.rs  storage_tests.rs  tray_presentation_tests.rs  update_check_tests.rs
apps/tauri/src/i18n/: index.ts
locales/source/: en-US.json  zh-CN.json
scripts/: bump-version.sh  dev-env.sh  i18n-generate.mjs
services/desktop-rust/: Cargo.toml
services/desktop-rust/crates/ble-macos/: Cargo.toml
services/desktop-rust/crates/ble-macos/src/: controller.rs
services/desktop-rust/crates/ble-macos/tests/: controller_tests.rs
services/desktop-rust/crates/ble-windows/: Cargo.toml
services/desktop-rust/crates/ble-windows/src/: controller.rs
services/desktop-rust/crates/ble-windows/tests/: controller_tests.rs
services/desktop-rust/crates/smspusher-core/: Cargo.toml
services/desktop-rust/crates/smspusher-core/src/: auth.rs  device_store.rs  json.rs  lib.rs  message_store.rs  models.rs  secret_store.rs  secure_envelope.rs  secure_pairing.rs  token.rs  verification_code.rs
services/desktop-rust/crates/smspusher-core/tests/: auth_tests.rs  device_store_tests.rs  message_store_tests.rs  protocol_json_tests.rs  verification_code_tests.rs
services/desktop-rust/crates/smspusher-crypto/: Cargo.toml  build.rs
services/desktop-rust/crates/smspusher-crypto/src/: aead.rs  boringssl.rs  envelope.rs  error.rs  hkdf.rs  jni.rs  lib.rs  pake.rs  transcript.rs
services/desktop-rust/crates/smspusher-service/: Cargo.toml
services/desktop-rust/crates/smspusher-service/src/: ble.rs  events.rs  lib.rs  runtime.rs  snapshot.rs
services/desktop-rust/crates/smspusher-service/tests/: ble_runtime_tests.rs  event_sink_tests.rs  runtime_tests.rs
services/desktop-rust/crates/transport-ble/: Cargo.toml
services/desktop-rust/crates/transport-ble/src/: lib.rs
services/desktop-rust/crates/transport-ble/tests/: central_contract_tests.rs  framing_tests.rs
services/desktop-rust/crates/transport-lan/: Cargo.toml
services/desktop-rust/crates/transport-lan/src/: http.rs  lib.rs  mdns.rs  server.rs
services/desktop-rust/crates/transport-lan/tests/: http_route_tests.rs  server_tests.rs
(+68 files in other folders)
