[workspace]
resolver = "2"
members = [
    "crates/ble-macos",
    "crates/ble-windows",
    "crates/smspusher-core",
    "crates/smspusher-crypto",
    "crates/smspusher-service",
    "crates/transport-ble",
    "crates/transport-lan",
]

[workspace.package]
edition = "2021"
rust-version = "1.77"
license = "AGPL-3.0-only"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
cmake = "0.1"
hex = "0.4"
if-addrs = "0.13"
jni = "0.21"
keyring = "4"
mdns-sd = "0.13"
rand = "0.8"
regex = "1"
reqwest = { version = "0.13", default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
zeroize = { version = "1", features = ["derive"] }
