[package]
name = "smspusher-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
hex.workspace = true
rand.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
smspusher-crypto = { path = "../smspusher-crypto" }
thiserror.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true
